Closed
Bug 687885
Opened 14 years ago
Closed 14 years ago
Don't use resetUseCount() outside of ifdef JS_METHODJIT
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla9
People
(Reporter: gaston, Unassigned)
Details
Attachments
(1 file)
|
981 bytes,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
Followup to that commit : http://hg.mozilla.org/mozilla-central/rev/9ca3d16d575c
Build now fails on sparc64 (where JS_METHODJIT is undef) with :
js/src/jsinfer.cpp:6041: error: 'struct JSScript' has no member named 'resetUseCount'
See http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/165/steps/build/logs/stdio
Imo the call should be included within JS_METHODJIT as the releaseScriptCode call upper.
| Reporter | ||
Comment 1•14 years ago
|
||
Trying that patch here, results in http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/166/steps/build/logs/stdio and apparently it fixes the build issue.
Attachment #561218 -
Flags: review?(bhackett1024)
Updated•14 years ago
|
Attachment #561218 -
Flags: review?(bhackett1024) → review+
| Reporter | ||
Updated•14 years ago
|
Keywords: checkin-needed
Comment 2•14 years ago
|
||
Keywords: checkin-needed
Whiteboard: inbound
Comment 3•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
Comment 4•14 years ago
|
||
Is possibly the cause of the macosx-debug_spidermonkey-shark builds going orange: (NB you need to use TBPL &usetinderbox=1 so the logs show up, due to bug 685299)
https://tbpl.mozilla.org/?tree=Mozilla-Inbound&usetinderbox=1&jobname=spidermonkey&rev=21a39c2f9060
http://tinderbox.mozilla.org/showlog.cgi?log=Mozilla-Inbound/1316539496.1316543246.4464.gz
The last JS touching changing before this (https://tbpl.mozilla.org/?tree=Mozilla-Inbound&usetinderbox=1&jobname=spidermonkey&rev=5a3e49205389) was green.
Updated•14 years ago
|
Whiteboard: inbound
You need to log in
before you can comment on or make changes to this bug.
Description
•