Fix use of resetUseCount outside JS_METHODJIT. bug 687885, r=bhackett